2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in command line handling.
	
	* tools/bin/cce.in: Avoid creating an empty argument in
	$slc_debug_flags.

2009-08-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in assembly optimizations.
	
	* tools/bin/spp (pppalpha.findlabels): Also look at directives,
	which may contain label uses (e.g. `.gprel').

2009-08-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT alpha code optimizations.	
	
	* tools/lib/t-utc0/slimpl.m4: Annotate the index register with an
	assembly comment, so that its special role can be picked up later
	by `spp'.

2009-08-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/bin/slc.in: `-save-temps' implies `-t .', as for `gcc'.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT alpha code optimizations.
	
	* tools/lib/t-utc0/slimpl.m4: Use type `long' for thread indexes.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Restore ability to process multiple input files.

	When `slc' was made more robust to special characters, a
	regression was introduced. This is now fixed.

	* tools/bin/slc.in: `"${inputs[@]}"', not `$inputs'.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix example.

	* programs/demo/keyblit.c: Place `sl_enddef' properly.

2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More MT alpha code optimizations.

	* programs/bin/spp: Optimize default family settings away,
	including cases where there is no whitespace before the constant
	value. For every killed instruction, also eliminate the following
	`swch' if it is there.
 
2009-08-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New demo program.

	The `keyblit' programs takes two arrays and one integer as
	input (the key), then applies the 2nd array (sprite) onto the
	1st (background) for every item of the sprite that is not equal to
	the key.
	
	* programs/demo/keyblit.c.d,
	* programs/demo/keyblit.c: New.

	* programs/demo/blitz.c.d,
	* programs/demo/blitz.c: Rename to...
	